--- a/hangMan-start/react-hangman-starter/src/Hangman.css
+++ b/hangMan-start/react-hangman-starter/src/Hangman.css
@@ -31,6 +31,7 @@
   margin-top: 0;
 }
 
+
 .Hangman button {
   border: none;
   font-family: inherit;
@@ -56,3 +57,10 @@
   color: #eeeeee;
   box-shadow: 0 6px #9e9e9e;
 }
+
+.Hangman-reset-btn{
+  text-align: center;
+  display: inline-block;
+  width: 250px;
+  margin-top: 0;
+ }
