--- a/hangMan-start/react-hangman-starter/src/Hangman.css
+++ b/hangMan-start/react-hangman-starter/src/Hangman.css
@@ -60,4 +60,9 @@
 
 #restart {
   width: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background: red;
+  box-shadow: rgb(134, 6, 6);
 }
